Refactor to use Firebase middleware

--- a/src/components/actionstep/AjaxAction.scss
+++ b/src/components/actionstep/AjaxAction.scss
@@ -1,19 +1,7 @@
 @import "~react-toolbox/lib/globals";
-@import "~react-toolbox/lib/input/config";
 
-.url {
-  display: flex;
-
-  .dropdown {
-    width: $unit * 8;
-  }
-
-  .prefix {
-    margin: 3 * $unit 0 2 * $unit $unit;
-    border-bottom: 1px solid $input-text-bottom-border-color;
-  }
-
-  .urlInput {
-    flex: 1;
-  }
+.file {
+  background-color: #f2f2f2;
+  padding: $unit;
+  color: $color-text-secondary;
 }
